fix jumping text issue

--- a/sass/my_styles.scss
+++ b/sass/my_styles.scss
@@ -116,7 +116,7 @@ nav.navbar {
 
 }
 .affix-top {
-  position: relative;
+  //position: relative;
   z-index: 100;
 
 }
